--- a/index.html
+++ b/index.html
@@ -185,6 +185,19 @@
           (с 10 до 20 ежедневно)
         </p>
   		<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+          <p class="feedback-item">
+            <label for="telephone-number">Телефон</label>
+            <input id="telephone-number" type="text" name="telehone-number" value="" placeholder="+7xxx xx xx">
+          </p>
+          <p class="feedback-item">
+            <label for="email">e-mail</label>
+            <input id="email" type="text" name="email" value="" placeholder="e-mail">
+          </p>
+          <p class="feedback-item">
+            <label for="comment">Комментарий</label>
+            <textarea name="comment" id="comment" rows=5>Текст комментария
+            </textarea>
+          </p>
       <button class="button" type="submit">Форма обратной связи</button>
         </form> 
   		</section>
@@ -197,14 +210,16 @@
           		<li><a class="social-button" href="#">Фейсбук</a></li>
           		<li><a class="social-button" href="#">Вконтакте</a></li>
        		 </ul>
-       	<div class="footer-details">
+      </div>
+      <div class="footer-details">
        		<ul>
-       			<li><a class="details-item" href="#"></a>Для поставщиков</li>
-       			<li><a class="details-item" href="#"></a>О производстве</li>
-       			<li><a class="details-item" href="#"></a>Наши документы</li>
-       			<li><a class="details-item" href="#"></a>Экологические стандарты</li>
+       			<li><a class="details-item" href="#">Для поставщиков</a></li>
+       			<li><a class="details-item" href="#">О производстве</a></li>
+       			<li><a class="details-item" href="#">Наши документы</a></li>
+       			<li><a class="details-item" href="#">Экологические стандарты</a></li>
        		</ul>
-       	</div>
+      </div>
+      <div>
   		<p class="footer-copyright">
         <b>Сделано в</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a> &#9400 2017.
       	</p>
