--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -62,7 +65,7 @@
         </ul>
         <section class="select-icecream">
             <h1>Сливочное мороженое</h1>
-            <form class="filter" method="get" action="action=" https://echo.htmlacademy.ru "></form>
+            <form class="filter" method="get" action="action=" https://echo.htmlacademy.ru ">
     <fieldset>
       <legend>Сортировка:</legend>
       <select name="sort-by ">
@@ -95,6 +98,7 @@
     </ul>
     </fieldset>
     <button type="submit" class="filter-button button">Применить</button>
+  </form>
   </section>
 
     <section class="articles-list">
