--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,7 @@
         </ul>
         <section class="select-icecream">
             <h1>Сливочное мороженое</h1>
-            <form class="filter" method="get" action="action=" https://echo.htmlacademy.ru ">
+            <form class="filter" method="get" action="https://echo.htmlacademy.ru">
     <fieldset>
       <legend>Сортировка:</legend>
       <select name="sort-by ">
