--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html"><img src="img/Logo.png" width="60" height="35" alt="Логотип Gllacy Shop"></a>
+      <a class="main-header-logo" href="index.html"><img src="img/Logo.png" width="154" height="64" alt="Логотип Gllacy Shop"></a>
       <ul class="site-navigation">
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="delivery-purchase.html">Доставка и оплата</a></li>
@@ -98,7 +98,7 @@
             </h3>
             <p class="hits-item-image">
               <img src="img/hit.png" width="40" height="40" alt="хит">
-              <img src="img/icecream-1.jpg" width="120" height="120" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <img src="img/icecream-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             </p>
           </a>
           <p class="hits-item-price">310<img src="img/ruble.svg">/<span>кг</span></p>
@@ -111,7 +111,7 @@
             </h3>
             <p class="hits-item-image">
               <img src="img/hit.png" width="40" height="40" alt="хит">
-              <img src="img/icecream-2.jpg" width="120" height="120" alt="Сливочно-кофейное с кусочками шоколада">
+              <img src="img/icecream-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             </p>
           </a>
           <p class="hits-item-price">380<img src="img/ruble.svg">/<span>кг</span></p>
@@ -124,10 +124,10 @@
             </h3>
             <p class="hits-item-image">
               <img src="img/hit.png" width="40" height="40" alt="хит">
-              <img src="img/icecream-3.jpg" width="120" height="120" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <img src="img/icecream-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             </p>
           </a>
-          <p class="hits-item-price">355 <img src="img/ruble.svg">/<span>кг</span></p>
+          <p class="hits-item-price">355<img src="img/ruble.svg">/<span>кг</span></p>
         </li>
 
         <li class="hits-item">
@@ -137,10 +137,10 @@
             </h3>
             <p class="hits-item-image">
               <img src="img/hit.png" width="40" height="40" alt="хит">
-              <img src="img/icecream-4.jpg" width="120" height="120" alt="Сливочное крем-брюле с карамельной подливкой">
+              <img src="img/icecream-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
             </p>
           </a>
-          <p class="hits-item-price">415 <img src="img/ruble.svg">/<span>кг</span></p>
+          <p class="hits-item-price">415<img src="img/ruble.svg">/<span>кг</span></p>
         </li>
       </ul>
     </section>
@@ -170,7 +170,7 @@
       <section class="blog-entry">
         <h2>Новое в нашем блоге</h2>
         <h3><a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a></h3>
-        <p class="blog-entry-image"><img src="img/blog-entry.svg" width="70" height="80" alt="сервировка щербета"></p>
+        <p class="blog-entry-image"></p>
       </section>
       <section class="subscribe">
         <p>Подпишитесь на нашу рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить
